--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -11,9 +11,23 @@
         <h2>The ultimate comfort food!</h2>
         <p>Sinigang is a classic Filipino soup characterized by its sour and savory medley of flavors. It’s popular comfort food in the Philippines,  usually served on its own or paired with steamed rice on rainy days to ward off the cold.</p>
     
-
-
-
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 pounds pork spare ribs, cut into 2-inch pieces</li>
+            <li>8 cups water</li>
+            <li>2 large tomatoes, quartered</li>
+            <li>1 medium onion, peeled and quartered</li>
+            <li>2 tablespoons fish sauce</li>
+            <li>6 pieces gabi, (peeled and halved depending on size)</li>
+            <li>1 6-inch radish (labanos), peeled and sliced to 1/2-inch thick half-rounds</li>
+            <li>2 finger chilies (siling haba)</li>
+            <li>1/2 bunch long beans (sitaw), ends trimmed and cut into 3-inch lengths</li>
+            <li>1 eggplant, ends trimmed and sliced to 1/2-inch thick half-rounds</li>
+            <li>6 pieces okra, ends trimmed</li>
+            <li>15 pieces large tamarind or 1 1/2 (1.41 ounces each) packages tamarind base powder
+                salt and pepper to taste</li>
+            <li>1 bunch bok choy or pechay, ends trimmed and separated into leaves</li>
+        </ul>
 
 
 
