--- a/recipes/sinigang.html
+++ b/recipes/sinigang.html
@@ -29,7 +29,27 @@
             <li>1 bunch bok choy or pechay, ends trimmed and separated into leaves</li>
         </ul>
 
+        <h2>Steps</h2>
+        <ol>
+            <li>Rinse pork ribs and drain well.</li>
+            <li>In a pot over medium heat, combine pork and enough water to cover. Bring to a boil, skimming scum that accumulates on top.</li>
+            <li>Once broth clears, add tomatoes, onion, and fish sauce. Lower heat and simmer for about 1 to 1 1/2 hours or until meat is tender, adding more water as necessary to maintain about 8 cups.</li>
+            <li>Add gabi and cook for about 4 to 6 minutes or until tender.</li>
+            <li>Add chili peppers and radish. Continue to simmer for about 2 to 3 minutes.</li>
+            <li>Add long beans. Continue to cook for about 2 minutes.</li>
+            <li>Add eggplant and okra and cook for another 1 to 2 minutes.</li>
+            <li>If using packaged tamarind base, add to the pot and stir until completely dissolved.</li>
+            <li>Season with salt and pepper to taste.</li>
+            <li>Add bok choy and continue to cook for about 1 minute. Serve hot.</li>
+        </ol>
 
+        <h3>If Using Fresh Tamarind</h3>
+        <ol>
+            <li>Wash tamarind and place in a saucepan with 1 cup water. Bring to a boil and cook until soft and outer skins begin to burst.</li>
+            <li>With a fork, mash tamarinds.</li>
+            <li>In a fine-mesh strainer set over a bowl, pour tamarind and liquid. Continue to mash with a fork, returning some of the liquid into the strainer once or twice, to fully extract the juice.</li>
+            <li>Discard seeds and skins. Pour tamarind juice into the pot of sinigang.</li>    
+        </ol>
 
         
     </body>
