--- a/recipes/beef-broccoli.html
+++ b/recipes/beef-broccoli.html
@@ -38,10 +38,21 @@
             <li>1 tablespoon cornstarch</li>
         </ul>
 
+        <h2>Steps</h2>
+        <ol>
+            <li>Wash beef and drain well.</li>
+            <li>In a bowl, combine egg white, cornstarch, rice wine and salt. Whisk together until well-blended. Add beef and stir to fully coat. Marinate in the refrigerator for about 30 minutes.</li>
+            <li>In wide pan or wok over medium heat, heat about 1 cup oil. Add beef slices and cook, stirring occasionally, for about 2 to 3 minutes or until lightly browned. Remove from pan and drain on paper towels.</li>
+            <li>In a pot over medium heat, heat about 4 cups of water to a boil. Add broccoli and cook for about 1 minute or until half-done. With a slotted spoon, remove broccoli from the pot and plunge into a bowl of ice water. When completely cool, drain very well. Reserve 1/2 cup of the liquid.</li>
+            <li>In a wok or wide pan over high heat, heat about 1 tablespoon oil. Add onions, garlic and ginger and cook, stirring regularly, for about 30 seconds or until aromatic.</li>
+            <li>Add stir-fry sauce and cook for about 1 minute or until it boils and thickens enough to coat back of spoon. Add beef and broccoli and cook, stirring regularly to cover with sauce, for about 3 to 5 minutes or until meat is heated through and broccoli florets are tender yet crisp. Serve hot.</li>
+            <li>Add beef and broccoli and cook, stirring regularly to cover with sauce, for about 2 to 3 minutes or until heated through. Serve hot.</li>
+        </ol>
 
-
-
-
+        <h2>For the Stir-fry Sauce</h2>
+        <ol>
+            <li>In a bowl, combine reserved poaching liquid, oyster sauce, Chinese cooking wine, rice vinegar, soy sauce, brown sugar, sesame oil, and cornstarch. Stir well until sugar and cornstarch are dissolved and well-dispersed.</li>
+        </ol>
 
 
     </body>
