--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/sinigang.html">Sinigang</a>
-        <a href="./recipes/adobo.html">Adobo</a>
-        <a href="./recipes/beef-broccoli.html">Beef Broccoli</a>
+        <ul>
+            <li><a href="./recipes/sinigang.html">Sinigang</a></li>
+            <li><a href="./recipes/adobo.html">Adobo</a></li>
+            <li><a href="./recipes/beef-broccoli.html">Beef Broccoli</a></li>
+        </ul>
+        
         
     </body>
 </html>
